syntax = "proto3";
package helloworld;

service Greeter {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHello(HelloRequest) returns(HelloResponse);
    rpc SayBye(ByeByeRequest) returns(ByeByeResponse);
}

message HelloRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message HelloResponse {
    // Reply contains the greeting message
    string message = 1;
}

message ByeByeRequest {
    int32 satisfactionLevel = 1;
}

message ByeByeResponse {
    string byeByeMsg = 1;
}



//wsup gamers